Test: rewrote test for all DAO to make sure branch coverage > 65%